--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,7 @@ publish/
 **/packages/*
 # except build/, which is used as an MSBuild target.
 !**/packages/build/
+!**/packages/DBFileReaderLib.1.0.0.0/
 # Uncomment if necessary however generally it will be regenerated when needed
 #!**/packages/repositories.config
 # NuGet v3's project.json files produces more ignoreable files
