--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,11 @@
 version: 1.0.{build}
-image: Visual Studio 2019
+image: Visual Studio 2022
 configuration:
 - Debug
 - Release
 platform: Any CPU
 before_build:
-- cmd: nuget restore
+- cmd: dotnet restore
 build:
   verbosity: minimal
 artifacts:
